fix: Add PV/PVC label selectors to ensure correct binding

--- a/k8s-manifests/freeswitch/deployment.yaml
+++ b/k8s-manifests/freeswitch/deployment.yaml
@@ -100,3 +100,6 @@ spec:
     requests:
       storage: 10Gi
   storageClassName: local-storage
+  selector:
+    matchLabels:
+      pv-name: freeswitch-data-pv
