refactor: Add ai-receptionist prefix to PV names for better organization

--- a/k8s-manifests/freeswitch/deployment.yaml
+++ b/k8s-manifests/freeswitch/deployment.yaml
@@ -102,4 +102,4 @@ spec:
   storageClassName: local-storage
   selector:
     matchLabels:
-      pv-name: freeswitch-data-pv
+      pv-name: ai-receptionist-freeswitch-data-pv
