--- a/k8s-manifests/ollama/pvc.yaml
+++ b/k8s-manifests/ollama/pvc.yaml
@@ -15,7 +15,7 @@ spec:
   storageClassName: local-storage
   selector:
     matchLabels:
-      pv-name: ollama-models-pv
+      pv-name: ai-receptionist-ollama-models-pv
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -34,4 +34,4 @@ spec:
   storageClassName: local-storage
   selector:
     matchLabels:
-      pv-name: ollama-data-pv
+      pv-name: ai-receptionist-ollama-data-pv
