fix: Add robust entrypoint script and init container for FreeSWITCH permissions
- Add entrypoint.sh to handle permissions at runtime
- Add init container to fix volume permissions before FreeSWITCH starts
- Test database creation before starting FreeSWITCH
- Fix corrupted SIGNALWIRE_TOKEN ARG in Dockerfile

--- a/k8s-manifests/freeswitch/deployment.yaml
+++ b/k8s-manifests/freeswitch/deployment.yaml
@@ -23,6 +23,29 @@ spec:
       securityContext:
         fsGroup: 996  # freeswitch group
         runAsUser: 0  # root (FreeSWITCH will drop to freeswitch user)
+      initContainers:
+      # Fix permissions on mounted volumes
+      - name: fix-permissions
+        image: busybox:latest
+        command:
+        - sh
+        - -c
+        - |
+          echo "Fixing permissions for FreeSWITCH volumes..."
+          chown -R 996:996 /var/lib/freeswitch /var/log/freeswitch
+          chmod -R 755 /var/lib/freeswitch /var/log/freeswitch
+          mkdir -p /var/lib/freeswitch/db
+          chown -R 996:996 /var/lib/freeswitch/db
+          chmod 755 /var/lib/freeswitch/db
+          echo "Permissions fixed!"
+          ls -la /var/lib/freeswitch/
+        volumeMounts:
+        - name: freeswitch-logs
+          mountPath: /var/log/freeswitch
+        - name: freeswitch-data
+          mountPath: /var/lib/freeswitch
+        securityContext:
+          runAsUser: 0
       containers:
       - name: freeswitch
         image: 176.9.65.80:5000/ai-receptionist/freeswitch-server:latest
