--- a/k8s-manifests/frontend/deployment.yaml
+++ b/k8s-manifests/frontend/deployment.yaml
@@ -35,7 +35,11 @@ spec:
           value: "http://backend-api:3000/api/v1"
         - name: NUXT_HOST
           value: "0.0.0.0"
+        - name: HOST
+          value: "0.0.0.0"
         - name: NUXT_PORT
+          value: "3000"
+        - name: PORT
           value: "3000"
         - name: NODE_ENV
           value: "production"
