fix: Add MetalLB pool annotation to frontend service
- Add metallb.universe.tf/ip-allocated-from-pool: first-pool annotation
- Match the same pool configuration used by FreeSWITCH services
- Enable proper IP sharing for LoadBalancer services on 88.198.85.74

--- a/k8s-manifests/frontend/deployment.yaml
+++ b/k8s-manifests/frontend/deployment.yaml
@@ -87,6 +87,7 @@ metadata:
     component: ui
   annotations:
     metallb.universe.tf/allow-shared-ip: "ai-receptionist-shared"
+    metallb.universe.tf/ip-allocated-from-pool: "first-pool"
 spec:
   type: LoadBalancer
   loadBalancerIP: 88.198.85.74
