--- a/k8s-manifests/frontend/deployment.yaml
+++ b/k8s-manifests/frontend/deployment.yaml
@@ -91,6 +91,11 @@ metadata:
 spec:
   type: LoadBalancer
   loadBalancerIP: 88.198.85.74
+  externalTrafficPolicy: Local
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 3600
   ports:
   - port: 80
     targetPort: 3000
