feat: Configure TLS certificates and frontend-backend communication
- Add TLS certificate setup for frontmind.mobiletel.eu (frontend)
- Add TLS certificate setup for api.frontmind.mobiletel.eu (backend API)
- Update frontend deployment to use external HTTPS API endpoint
- Document network policy fix for ACME HTTP-01 challenges
- Add CORS configuration for frontend-backend communication
- Update documentation to use mobiletel.eu domain
- Note: Network policy requires 'kubectl label namespace default name=ingress-nginx'

--- a/k8s-manifests/frontend/deployment.yaml
+++ b/k8s-manifests/frontend/deployment.yaml
@@ -31,8 +31,10 @@ spec:
           containerPort: 3000
           protocol: TCP
         env:
-        - name: BACKEND_API_URL
-          value: "http://backend-api:3000/api/v1"
+        - name: API_BASE_URL
+          value: "https://api.frontmind.mobiletel.eu/api/v1"
+        - name: BACKEND_API_URL  # Legacy - keeping for compatibility
+          value: "https://api.frontmind.mobiletel.eu/api/v1"
         - name: NUXT_HOST
           value: "0.0.0.0"
         - name: HOST
