fix: Replace hardcoded URLs with environment variables
- Update .env and .env.example with proper API_BASE_URL usage
- Fix AI Chat Widget documentation to use ${API_BASE_URL} and ${WIDGET_CDN_URL}
- Update frontend health checks to use configuration from environment
- Configure CORS for production domains via environment variables
- Ensure all services use configurable URLs instead of hardcoded values

This allows proper configuration for development, staging, and production
environments without code changes.

--- a/.env
+++ b/.env
@@ -1,26 +1,32 @@
 # AI Receptionist Project Configuration
 # This file contains centralized configuration for all services
 
-# Backend API Configuration
-API_HOST=localhost
-API_PORT=3000
-API_BASE_URL=http://localhost:3000/api/v1
+# Backend API Configuration (Production)
+API_HOST=api.frontmind.mobiletel.eu
+API_PORT=443
+API_BASE_URL=https://api.frontmind.mobiletel.eu/api/v1
 
-# Frontend Configuration  
-FRONTEND_HOST=localhost
-FRONTEND_PORT=3001
+# Frontend Configuration (Production)
+FRONTEND_HOST=frontmind.mobiletel.eu
+FRONTEND_PORT=443
+FRONTEND_URL=https://frontmind.mobiletel.eu
 
-# Database Configuration
-DB_HOST=localhost
+# Database Configuration (Kubernetes internal)
+DB_HOST=mysql-service
 DB_USER=root
 DB_PASSWORD=
 DB_NAME_DEV=backend_ai_receptionist_development
 DB_NAME_TEST=backend_ai_receptionist_test
 
-# AI Engine Configuration
-AI_ENGINE_HOST=localhost
-AI_ENGINE_PORT=8000
+# AI Engine Configuration (Kubernetes internal)
+AI_ENGINE_HOST=ai-engine-service
+AI_ENGINE_PORT=8081
+AI_ENGINE_URL=http://ai-engine-service:8081
 
-# AI FreeSWITCH Configuration
-AI_FREESWITCH_HOST=localhost
-AI_FREESWITCH_PORT=8001
+# AI FreeSWITCH Configuration (Kubernetes internal)
+AI_FREESWITCH_HOST=freeswitch-integration-service
+AI_FREESWITCH_PORT=8080
+FREESWITCH_URL=http://freeswitch-integration-service:8080
+
+# Backend URL for internal communication
+BACKEND_URL=http://backend-api-service:3000
