--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,14 @@ MYSQL_DATABASE=ai_receptionist_development
 MYSQL_USER=ai_receptionist
 MYSQL_PASSWORD=secure_database_password
 
-# Service URLs (for development)
+# Service URLs (for development - use environment specific values in production)
 AI_ENGINE_URL=http://localhost:8081
 FREESWITCH_URL=http://localhost:8080
 BACKEND_URL=http://localhost:3000
 FRONTEND_URL=http://localhost:3001
+
+# API Configuration (for external clients)
+API_BASE_URL=http://localhost:3000/api/v1
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
