--- a/ai-chat/.env.example
+++ b/ai-chat/.env.example
@@ -5,8 +5,8 @@ WIDGET_DEV_PORT=8080
 WIDGET_DEV_HOST=localhost
 
 # Production Environment
-API_BASE_URL=http://localhost:3000/api/v1
-WIDGET_CDN_URL=https://your-cdn.com/ai-chat-widget.min.js
+API_BASE_URL=https://api.frontmind.mobiletel.eu/api/v1
+WIDGET_CDN_URL=https://cdn.frontmind.mobiletel.eu/ai-chat-widget.js
 
 # Default Configuration
 DEFAULT_THEME=blue
