feat: Add API key authentication for production deployment
- Add API_KEY environment variable to frontend and backend configuration
- Update frontend API calls to include Authorization header with Bearer token
- Configure backend to accept API keys for authentication
- Set up production API key 'frontend-production-key-2024'

This fixes the 401 Unauthorized error when frontend calls backend API.

--- a/.env
+++ b/.env
@@ -11,6 +11,10 @@ FRONTEND_HOST=frontmind.mobiletel.eu
 FRONTEND_PORT=443
 FRONTEND_URL=https://frontmind.mobiletel.eu
 
+# API Authentication
+API_KEY=frontend-production-key-2024
+PRIMARY_API_KEY=frontend-production-key-2024
+
 # Database Configuration (Kubernetes internal)
 DB_HOST=mysql-service
 DB_USER=root
