feat: Add API_KEY environment variable to Kubernetes deployments
- Add API_KEY=frontend-production-key-2024 to backend deployment
- Add API_KEY=frontend-production-key-2024 to frontend deployment
- Update image references to use correct backend-ai-receptionist and frontend-ai-receptionist names
- Configure PRIMARY_API_KEY for backend authentication validation

This resolves the 401 Unauthorized error by enabling API key authentication
between frontend and backend services in production.

--- a/k8s-manifests/backend/deployment.yaml
+++ b/k8s-manifests/backend/deployment.yaml
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
       - name: backend-api
-        image: 176.9.65.80:5000/ai-receptionist/backend:latest
+        image: 176.9.65.80:5000/ai-receptionist/backend-ai-receptionist:latest
         imagePullPolicy: Always
         ports:
         - name: http
@@ -53,6 +53,10 @@ spec:
               key: secret-key-base
         - name: AI_ENGINE_URL
           value: "http://ai-engine:8000"
+        - name: API_KEY
+          value: "frontend-production-key-2024"
+        - name: PRIMARY_API_KEY
+          value: "frontend-production-key-2024"
         resources:
           requests:
             memory: "512Mi"
@@ -88,7 +92,7 @@ spec:
       terminationGracePeriodSeconds: 30
       initContainers:
       - name: db-migrate
-        image: 176.9.65.80:5000/ai-receptionist/backend:latest
+        image: 176.9.65.80:5000/ai-receptionist/backend-ai-receptionist:latest
         imagePullPolicy: Always
         command: ['bundle', 'exec', 'rails', 'db:migrate']
         env:
