--- a/k8s-manifests/frontend/deployment.yaml
+++ b/k8s-manifests/frontend/deployment.yaml
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: 176.9.65.80:5000/ai-receptionist/frontend:latest
+        image: 176.9.65.80:5000/ai-receptionist/frontend-ai-receptionist:latest
         imagePullPolicy: Always
         ports:
         - name: http
@@ -33,6 +33,8 @@ spec:
         env:
         - name: API_BASE_URL
           value: "https://api.frontmind.mobiletel.eu/api/v1"
+        - name: API_KEY
+          value: "frontend-production-key-2024"
         - name: BACKEND_API_URL  # Legacy - keeping for compatibility
           value: "https://api.frontmind.mobiletel.eu/api/v1"
         - name: NUXT_HOST
