Fix db-migrate initContainer to use ./bin/rails db:migrate for Rails production image compatibility

--- a/backend-ai-receptionist/Dockerfile
+++ b/backend-ai-receptionist/Dockerfile
@@ -51,6 +51,8 @@ RUN bundle exec bootsnap precompile app/ lib/
 # Final stage for app image
 FROM base
 
+WORKDIR /rails
+
 # Copy built artifacts: gems, application
 COPY --from=build "${BUNDLE_PATH}" "${BUNDLE_PATH}"
 COPY --from=build /rails /rails
