--- a/k8s-manifests/freeswitch/configmap.yaml
+++ b/k8s-manifests/freeswitch/configmap.yaml
@@ -1,3 +1,59 @@
+  modules.conf.xml: |
+    <configuration name="modules.conf" description="Modules">
+      <modules>
+        <load module="mod_console"/>
+        <load module="mod_logfile"/>
+        <load module="mod_enum"/>
+        <load module="mod_cdr_csv"/>
+        <load module="mod_event_socket"/>
+        <load module="mod_sofia"/>
+        <load module="mod_loopback"/>
+        <load module="mod_commands"/>
+        <load module="mod_conference"/>
+        <load module="mod_dptools"/>
+        <load module="mod_expr"/>
+        <load module="mod_fifo"/>
+        <load module="mod_hash"/>
+        <load module="mod_voicemail"/>
+        <load module="mod_esf"/>
+        <load module="mod_fsv"/>
+        <load module="mod_cluechoo"/>
+        <load module="mod_valet_parking"/>
+        <load module="mod_httapi"/>
+        <load module="mod_dialplan_xml"/>
+        <load module="mod_spandsp"/>
+        <load module="mod_g723_1"/>
+        <load module="mod_xml_curl"/>
+        <load module="mod_g729"/>
+        <load module="mod_amr"/>
+        <load module="mod_speex"/>
+        <load module="mod_sndfile"/>
+        <load module="mod_native_file"/>
+        <load module="mod_local_stream"/>
+        <load module="mod_tone_stream"/>
+        <load module="mod_lua"/>
+        <load module="mod_say_en"/>
+        <!-- Add/remove modules as needed for your project -->
+      </modules>
+    </configuration>
+
+  xml_curl.conf.xml: |
+    <configuration name="xml_curl.conf" description="cURL XML Gateway">
+      <bindings>
+        <binding name="directory">
+          <param name="gateway-url" value="http://backend-api:3000/api/v1/freeswitch/directory" bindings="directory"/>
+          <param name="method" value="POST"/>
+        </binding>
+        <binding name="dialplan">
+          <param name="gateway-url" value="http://backend-api:3000/api/v1/freeswitch/dialplan" bindings="dialplan"/>
+          <param name="method" value="POST"/>
+        </binding>
+        <binding name="configuration">
+          <param name="gateway-url" value="http://backend-api:3000/api/v1/freeswitch/configuration" bindings="configuration"/>
+          <param name="method" value="POST"/>
+        </binding>
+      </bindings>
+    </configuration>
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -46,3 +102,20 @@ data:
                             logger.error(f"Failed to log call transcript: {response.status}")
             except Exception as e:
                 logger.error(f"Error logging call transcript: {e}")
+  
+  modules.conf.xml: |
+    <configuration name="modules.conf" description="Modules">
+      <modules>
+        <load module="mod_console"/>
+        <load module="mod_logfile"/>
+        <load module="mod_xml_curl"/>
+        <load module="mod_dialplan_xml"/>
+        <!-- Add other required modules -->
+      </modules>
+    </configuration>
+  xml_curl.conf.xml: |
+    <configuration name="xml_curl.conf" description="cURL XML Gateway">
+      <bindings>
+        <!-- Add your API bindings here -->
+      </bindings>
+    </configuration>
