--- a/k8s-manifests/freeswitch/configmap.yaml
+++ b/k8s-manifests/freeswitch/configmap.yaml
@@ -21,7 +21,7 @@ data:
 
         <!-- XML Interfaces -->
         <!-- <load module="mod_xml_rpc"/> -->
-        <!-- <load module="mod_xml_curl"/> -->
+        <load module="mod_xml_curl"/>
         <!-- <load module="mod_xml_cdr"/> -->
         <!-- <load module="mod_xml_radius"/> -->
         <!-- <load module="mod_xml_scgi"/> -->
