--- a/k8s-manifests/freeswitch/configmap.yaml
+++ b/k8s-manifests/freeswitch/configmap.yaml
@@ -4,6 +4,94 @@ metadata:
   name: freeswitch-config
   namespace: ai-receptionist
 data:
+  sofia.conf.xml: |
+    <!-- sofia.conf.xml -->
+    <configuration name="sofia.conf" description="sofia Endpoint">
+      <profiles>
+        <profile name="ai_receptionist">
+          <settings>
+            <param name="debug" value="0"/>
+            <param name="sip-trace" value="no"/>
+            <param name="rfc2833-pt" value="101"/>
+            <param name="sip-port" value="5060"/>
+            <param name="dialplan" value="XML"/>
+            <param name="context" value="ai_receptionist"/>
+            <param name="dtmf-duration" value="2000"/>
+            <param name="inbound-codec-prefs" value="PCMU,PCMA,GSM"/>
+            <param name="outbound-codec-prefs" value="PCMU,PCMA,GSM"/>
+            <param name="hold-music" value="$${hold_music}"/>
+            <param name="rtp-timer-name" value="soft"/>
+            <param name="local-network-acl" value="localnet.auto"/>
+            <param name="manage-presence" value="false"/>
+            <param name="inbound-codec-negotiation" value="generous"/>
+            <param name="nonce-ttl" value="60"/>
+            <param name="auth-calls" value="true"/>
+            <param name="accept-blind-reg" value="false"/>
+            <param name="accept-blind-auth" value="false"/>
+            <param name="auth-all-packets" value="false"/>
+            <param name="ext-rtp-ip" value="auto-nat"/>
+            <param name="ext-sip-ip" value="auto-nat"/>
+            <param name="rtp-ip" value="auto"/>
+            <param name="sip-ip" value="auto"/>
+            <!-- Directory lookup via HTTP -->
+            <param name="xml-user-directory" value="true"/>
+            <param name="xml-user-directory-cache" value="false"/>
+          </settings>
+        </profile>
+      </profiles>
+    </configuration>
+  ai_receptionist.xml: |
+    <!-- dialplan/ai_receptionist.xml -->
+    <include>
+      <context name="ai_receptionist">
+        <extension name="ai_receptionist_incoming">
+          <condition field="destination_number" expression="^(ai_receptionist|1000)$">
+            <action application="set" data="call_timeout=30"/>
+            <action application="set" data="hangup_after_bridge=true"/>
+            <action application="answer"/>
+            <action application="sleep" data="1000"/>
+            <action application="socket" data="localhost:8080 async full"/>
+            <action application="playback" data="ivr/ivr-thank_you_for_calling.wav"/>
+            <action application="playback" data="ivr/ivr-please_hold_while_we_transfer_your_call.wav"/>
+            <action application="transfer" data="operator"/>
+          </condition>
+        </extension>
+        <extension name="operator_transfer">
+          <condition field="destination_number" expression="^operator$">
+            <action application="bridge" data="user/operator@$${domain_name}"/>
+            <action application="hangup"/>
+          </condition>
+        </extension>
+        <extension name="voicemail">
+          <condition field="destination_number" expression="^voicemail$">
+            <action application="voicemail" data="default $${domain_name} 1000"/>
+          </condition>
+        </extension>
+      </context>
+    </include>
+  event_socket.conf.xml: |
+    <!-- autoload_configs/event_socket.conf.xml -->
+    <configuration name="event_socket.conf" description="Socket Client">
+      <settings>
+        <param name="nat-map" value="false"/>
+        <param name="listen-ip" value="127.0.0.1"/>
+        <param name="listen-port" value="8021"/>
+        <param name="password" value="ClueCon"/>
+        <param name="apply-inbound-acl" value="loopback.auto"/>
+      </settings>
+    </configuration>
+  switch.conf.xml: |
+    <!-- autoload_configs/switch.conf.xml -->
+    <configuration name="switch.conf" description="Core Configuration">
+      <settings>
+        <param name="colorize-console" value="true"/>
+        <param name="max-sessions" value="1000"/>
+        <param name="sessions-per-second" value="30"/>
+        <param name="loglevel" value="info"/>
+        <param name="rtp-start-port" value="16384"/>
+        <param name="rtp-end-port" value="32768"/>
+      </settings>
+    </configuration>
   modules.conf.xml: |
     <configuration name="modules.conf" description="Modules">
       <modules>
