--- a/k8s-manifests/freeswitch/configmap.yaml
+++ b/k8s-manifests/freeswitch/configmap.yaml
@@ -126,6 +126,7 @@ data:
         <!-- <load module="mod_cdr_sqlite"/> -->
         <!-- <load module="mod_event_multicast"/> -->
         <load module="mod_event_socket"/>
+        <load module="mod_acl"/>
         <!-- <load module="mod_event_zmq"/> -->
         <!-- <load module="mod_zeroconf"/> -->
         <!-- <load module="mod_erlang_event"/> -->
