Add acl.conf.xml to freeswitch configmap and deployment, allow 24.18.42.127 in trusted ACL, fix mount path

--- a/k8s-manifests/freeswitch/configmap.yaml
+++ b/k8s-manifests/freeswitch/configmap.yaml
@@ -40,6 +40,14 @@ data:
         </profile>
       </profiles>
     </configuration>
+  acl.conf.xml: |
+    <configuration>
+      <lists>
+        <list name="trusted" default="deny">
+          <node type="allow" cidr="24.18.42.127/32"/>
+        </list>
+      </lists>
+    </configuration>
   ai_receptionist.xml: |
     <!-- dialplan/ai_receptionist.xml -->
     <include>
